--- a/index.html
+++ b/index.html
@@ -215,6 +215,143 @@
                 <center>que alegra mi destino💘”</center>
             </p>
 
+            <p> - </p>
+            <p> - </p>
+
+            <p>Ahora un pequeño cuento que me gusto mucho por el desenlace,
+               y porque me recuerda a ti, cambio los nombres de los personajes a cada
+               uno de nuestros nombres</p>
+
+            <p><center><b>El Café de las Mil Coincidencias</b></center></p>
+
+            <p>Había una vez, en una ciudad donde siempre llovía los martes, 
+                un joven llamado Luis que trabajaba en una librería especializada en libros
+                antiguos (y un poco encantados, aunque nadie lo admitía oficialmente). 
+                Luis era de esos tipos que leían poemas bajo la lluvia, 
+                creían en los signos del universo y tenían una habilidad 
+                casi sobrenatural para encontrar el libro perfecto para cualquier persona… 
+                menos para él mismo.</p>
+
+                <p>
+                    Un martes lluvioso, como todos los martes, entró corriendo al café 
+                    de la esquina para refugiarse del aguacero. Llevaba un libro 
+                    en una mano, una mochila que parecía a punto de explotar 
+                    y un paraguas roto que goteaba como un grifo antiguo. 
+                    Fue entonces cuando la vio.
+                </p>
+
+                <p>
+                    Ella estaba sentada en la mesa del fondo, con una taza de chocolate caliente 
+                    y un libro de cuentos rusos que sostenía del revés. 
+                    Se llamaba Dally. No porque fuera misteriosa o brillara en la oscuridad, 
+                    sino porque su madre era fanática de los nombres astronómicos y había nacido en una noche 
+                    de luna llena.
+                </p>
+
+                <p>
+                    —¿Estás leyendo o solo admirando la tapa? —le preguntó Luis, acercándose sin pensarlo.
+                </p>
+
+                <p>
+                    —Ambas —respondió ella con una sonrisa—. Pero si me dices de qué trata, te perdono 
+                    por interrumpir mi meditación líquida.
+                </p>
+
+                <p>
+                    Y así, entre gotas de lluvia y risas mal disimuladas, comenzó lo que todos en el café 
+                    empezaron a llamar “la historia del chico que hablaba con los libros 
+                    y la chica que leía con los ojos cerrados”.
+                </p>
+
+                <p>
+                    Pasaron meses llenos de coincidencias: encontraban el mismo libro en distintas librerías, 
+                    pedían el mismo desayuno sin consultarse, y hasta sus abuelos habían ido al mismo colegio 
+                    (aunque con 30 años de diferencia). Hacían listas de cosas absurdas: 
+                    “10 sonidos que nos hacen reír”, “7 formas de escapar de una cita aburrida” y 
+                    “5 momentos en los que el universo nos guiñó un ojo”.
+                </p>
+
+                <p>
+                    Pero la vida, como suele hacerlo, decidió jugar una carta inesperada. 
+                    Dally recibió una beca para estudiar arte en Japón. 
+                    Era una oportunidad única, un sueño desde que tenía 12 años. 
+                    Luis la animó con todo el corazón, aunque por dentro sentía que el universo 
+                    se burlaba de él: ¿por qué justo ahora?
+                </p>
+
+                <p>
+                    Se despidieron en el mismo café, bajo una lluvia que esta vez no parecía tan poética. 
+                    Se abrazaron tanto que el paraguas de Luis se desarmó por completo.
+                </p>
+
+                <p>
+                    —Prométeme que no dejarás de leer libros raros —dijo Dally.
+                </p>
+
+                <p>
+                    —Solo si prometes no leer más libros al revés —respondió él, con la voz quebrada.
+                </p>
+
+                <p>
+                    Pasaron los años. Luis siguió en la librería, ahora como dueño. A veces, cuando sonaba 
+                    la campanilla de la puerta, su corazón daba un brinco. “¿Y si es ella?”, pensaba. Pero nunca lo era.
+                </p>
+
+                <p>
+                    Hasta que un martes… llovió.
+                </p>
+
+                <p>
+                    Y al abrir la puerta del café, ahí estaba. 
+                    Dally. Con una maleta, una sonrisa enorme y un libro de cuentos raros… esta vez derecho.
+                </p>
+
+                <p>
+                    —¡Luis! —gritó—. ¡Adivina qué! ¡Mi exposición de arte se hace aquí la próxima semana!
+                </p>
+
+                <p>
+                    Él no pudo hablar. Solo corrió, resbaló con un charco, se levantó y volvió a correr. 
+                    La abrazó tan fuerte que ambos cayeron sentados en el charco, 
+                    riendo como si el tiempo no hubiera pasado.
+                </p>
+
+                <p>
+                    —¿Sabes qué es lo más gracioso? —dijo ella, empapada—. 
+                    En Tokio, cada vez que llovía, buscaba un café y pedía chocolate caliente… 
+                    y siempre esperaba que alguien entrara con un paraguas roto.
+                </p>
+
+                <p>
+                    —Y yo —confesó Luis—, cada vez que alguien pide chocolate caliente, 
+                    miro hacia la puerta… por si acaso.
+                </p>
+
+                <p>
+                    Y así, entre risas, charcos y libros mojados, descubrieron que el destino no siempre 
+                    los separa. A veces, solo los hace esperar el momento perfecto para volver a encontrarse.
+                </p>
+
+                <p>
+                    Y desde ese día, todos los martes, en el café de la esquina, dos personas se sientan 
+                    en la mesa del fondo, comparten chocolate caliente y leen el mismo libro… 
+                    uno en voz alta, el otro con los ojos cerrados.
+                </p>
+
+                <p>
+                    Porque algunas historias no terminan. Solo toman un descanso… para luego seguir con un final feliz.
+                </p>
+           
+           <p>
+               Me despido esperando que cada una de las plabaras que escribí te gusten mucho, sé que no puedo
+               cambiar nada con esto, pero es para que sepas lo mucho que quiero, aunque a veces solo me pongo
+               a pensar un monton de cosas... 
+           </p>
+
+           <p>
+               Te mando un fuerte Abrazo y Muchos besos...
+           </p>
+
            <p><strong>Att:</strong></p>
 
            <p><center><strong>Un Chico enamorado💕</strong></center></p>
